# cpp_simd_detector

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
include/: simd_detector.h
src/: main.cpp
